--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Song+Myung|Vollkorn:400,600" rel="stylesheet">
     <link rel="stylesheet" href="%PUBLIC_URL%/styles.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
